--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "03-hoc",
+  "name": "02-http-requests",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "ed-grid": "^2.9.0",
+    "edteam-style-guides": "0.0.59",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
